removal of python as solver, resorting to backend

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ configure_file(
 set(HEADERS
 				src/backend/disjointSets.hpp
 				src/backend/mazeGen.hpp
+                src/backend/astar.hpp
 )
 
 set(SOURCES
@@ -40,10 +41,10 @@ include_directories("${PROJECT_SOURCE_DIR}/src/frontend")
 
 add_executable(${EXECUTABLE_NAME} ${SOURCES} ${HEADERS})
 
-set(Python_ADDITIONAL_VERSIONS 3.4)
-find_package(PythonLibs REQUIRED)
-include_directories(${PYTHON_INCLUDE_DIRS})
-target_link_libraries(${EXECUTABLE_NAME} ${PYTHON_LIBRARIES})
+#set(Python_ADDITIONAL_VERSIONS 3.4)
+#find_package(PythonLibs REQUIRED)
+#include_directories(${PYTHON_INCLUDE_DIRS})
+#target_link_libraries(${EXECUTABLE_NAME} ${PYTHON_LIBRARIES})
 
 #copy runtime deps
 add_custom_target(copy_runtime_dependencies ALL)
