--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ endif()
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 set(EXECUTABLE_NAME "MazeSovler")
-set(VERSION_MAJOR 0)
+set(VERSION_MAJOR 1)
 set(VERSION_MINOR 1)
 configure_file(
 				"${PROJECT_SOURCE_DIR}/config.h.in"
@@ -20,39 +20,18 @@ configure_file(
 				)
 
 set(HEADERS
-				src/backend/disjointSets.hpp
-				src/backend/mazeGen.hpp
-                src/backend/astar.hpp
+				src/mazesolve/disjointSets.hpp
+				src/mazesolve/mazeGen.hpp
+                src/mazesolve/astar.hpp
 )
 
 set(SOURCES
-				src/backend/disjointSets.cpp
-				src/backend/mazeGen.cpp
+				src/mazesolve/disjointSets.cpp
+				src/mazesolve/mazeGen.cpp
 				src/main.cpp
 )
 
-set(RUNTIME_DEPENDENCIES
-                src/frontend/pySolve.py
-)
-
 include_directories("${PROJECT_BINARY_DIR}")
-include_directories("${PROJECT_SOURCE_DIR}/src/backend")
-include_directories("${PROJECT_SOURCE_DIR}/src/frontend")
+include_directories("${PROJECT_SOURCE_DIR}/src/mazesolve")
 
 add_executable(${EXECUTABLE_NAME} ${SOURCES} ${HEADERS})
-
-#set(Python_ADDITIONAL_VERSIONS 3.4)
-#find_package(PythonLibs REQUIRED)
-#include_directories(${PYTHON_INCLUDE_DIRS})
-#target_link_libraries(${EXECUTABLE_NAME} ${PYTHON_LIBRARIES})
-
-#copy runtime deps
-add_custom_target(copy_runtime_dependencies ALL)
-foreach(RUNTIME_DEPENDENCY ${RUNTIME_DEPENDENCIES})
-		get_filename_component(barename ${RUNTIME_DEPENDENCY} NAME)
-		message(STATUS ${barename})
-		add_custom_command(TARGET copy_runtime_dependencies POST_BUILD
-                       COMMAND ${CMAKE_COMMAND} -E copy
-					   ${CMAKE_SOURCE_DIR}/${RUNTIME_DEPENDENCY}
-					   $<TARGET_FILE_DIR:${EXECUTABLE_NAME}>/${barename})
-endforeach()
