Added -std=c++1y flag for compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
 endif()
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
+set(CMAKE_CXX_FLAGS "-std=c++1y")
 set(EXECUTABLE_NAME "MazeSolver")
 set(VERSION_MAJOR 1)
 set(VERSION_MINOR 1)
